discussion/kv_engine/181151/181151_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53953: Cancel all RangeScans on shutdown

If the backend=magma it will block if snapshots are still referenced
when requested to shutdown. Any RangeScan that exists will be in this
state and if not already cancelled or continued will cause a deadlock
on the shutdown.

This commit requests that all RangeScans be cancelled when the bucket
is shutting down.

Change-Id: Ic0ff1867269590a740f3d93dc6fe9f8a29792c78

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-13 13:40:36.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-13 13:56:57.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21143/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_engine.cc:751:15: error: no matching function for call to "cookie_to_mock_cookie" [clang-diagnostic-error]
    auto* c = cookie_to_mock_cookie(&cookie);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_cookie.h:193:13: note: candidate function not viable: 1st argument ("const CookieIface *") would lose const qualifier
MockCookie* cookie_to_mock_cookie(CookieIface* cookie);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_engine.cc:761:44: error: binding reference of type "CookieIface" to value of type "const CookieIface" drops "const" qualifier [clang-diagnostic-error]
        return the_engine->createRangeScan(cookie,
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine.h:746:26: note: passing argument to parameter "cookie" here
            CookieIface& cookie,
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_engine.h:335:13: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
            override;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/engine.h:745:59: note: hidden overloaded virtual function "EngineIface::createRangeScan" declared here: type mismatch at 1st parameter ("CookieIface &" vs "const CookieIface &")
    virtual std::pair<cb::engine_errc, cb::rangescan::Id> createRangeScan(
                                                          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21143/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_engine.cc:751:15:
error: no matching function for call to "cookie_to_mock_cookie" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21143/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50337/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\programs\engine_testapp\mock_engine.h(326): error C3668: "MockEngine::createRangeScan": method with override specifier "override" did not override any base class methods ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50337/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42233/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/engine_testapp/mock_engine.h:335:13:
error: non-virtual member function marked "override" hides virtual member function
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42233/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10972/ : FAILURE

Compile error at [2022-10-13T13:48:28.614Z] ../kv_engine/programs/engine_testapp/mock_engine.h:326:51:
error: ?std::pair<cb::engine_errc, boost::uuids::uuid> MockEngine::createRangeScan(const CookieIface&, Vbid, CollectionID, cb::rangescan::KeyView, cb::rangescan::KeyView, cb::rangescan::KeyOnly, std::optional<cb::rangescan::SnapshotRequirements>, std::optional<cb::rangescan::SamplingConfiguration>)? marked ?override?, but does not override
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10972/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22574/ : FAILURE

Compile error at [2022-10-13T13:50:50.326Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/programs/engine_testapp/mock_engine.h:335:13:
error: non-virtual member function marked "override" hides virtual member function
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22574/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10875/ : FAILURE

Compile error at [2022-10-13T13:42:06.082Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/programs/engine_testapp/mock_engine.h:335:13:
error: non-virtual member function marked "override" hides virtual member function
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10875/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23164/ : FAILURE

Compile error at [2022-10-13T13:43:46.643Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/programs/engine_testapp/mock_engine.h:326:51:
error: ?std::pair<cb::engine_errc, boost::uuids::uuid> MockEngine::createRangeScan(const CookieIface&, Vbid, CollectionID, cb::rangescan::KeyView, cb::rangescan::KeyView, cb::rangescan::KeyOnly, std::optional<cb::rangescan::SnapshotRequirements>, std::optional<cb::rangescan::SamplingConfiguration>)? marked ?override?, but does not override
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23164/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23560/ : FAILURE

Compile error at [2022-10-13T13:46:10.313Z] ../kv_engine/programs/engine_testapp/mock_engine.h:326:51:
error: ?std::pair<cb::engine_errc, boost::uuids::uuid> MockEngine::createRangeScan(const CookieIface&, Vbid, CollectionID, cb::rangescan::KeyView, cb::rangescan::KeyView, cb::rangescan::KeyOnly, std::optional<cb::rangescan::SnapshotRequirements>, std::optional<cb::rangescan::SamplingConfiguration>)? marked ?override?, but does not override
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23560/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24397/ : FAILURE

Compile error at [2022-10-13T13:43:52.351Z] ../kv_engine/programs/engine_testapp/mock_engine.h:335:13:
error: non-virtual member function marked "override" hides virtual member function
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24397/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31576/ : FAILURE

Compile error at [2022-10-13T13:44:52.034Z] ../kv_engine/programs/engine_testapp/mock_engine.h:335:13:
error: non-virtual member function marked "override" hides virtual member function
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31576/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20393/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
